--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 cdifflib==1.2.6
-Flask==2.3.2
+Flask==2.2.5
 Flask_Cors==4.0.0
 librosa==0.10.0.post2
-numpy==1.24.4
+numpy==1.24.3
+openai==0.27.7
+rapidfuzz==3.1.2
 soundfile==0.12.1
 torch==2.0.1
-transformers==4.31.0
+transformers==4.29.2
